# pg_gensql

./: Cargo.toml  LICENSE  README.md  docker-compose.yaml
src/: array.rs  main.rs  raw.rs  serialize_for_insert.rs
test_data/: 01-init-data.sql
