[package]
name = "pg_gensql"
version = "0.1.0"
authors = ["Alex Chamberlain <alex@alexchamberlain.co.uk>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
fallible-iterator = "^0.2"
itertools = "^0.10"
log = "*"
postgres-protocol = "^0.6"
serde_json = "^1.0"
simple_logger = "*"
time = "^0.2.26"
tokio = { version = "^1.0", features = ["full"] }
tokio-postgres = { version = "^0.7", features = ["runtime", "with-serde_json-1", "with-time-0_2", "with-uuid-0_8"] }
uuid = "^0.8"
